ya funcionan los filtros, tanto por categorias como por mas vendidos y ultimos añadidos

--- a/html/categoria-agro.html
+++ b/html/categoria-agro.html
@@ -51,22 +51,22 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="row-content-products">
                 <div class="col-md-2">
                     <div id="radio-categoria" class="row">
                     </div>
                     <div id="radio-especificacion"  class="row">
                             <h2 class="filtroh2">Especificación</h2>
                             <label class="container">SIN FILTROS
-                                <input type="radio" checked="checked" name="especificacion" />
+                                <input type="radio" checked="checked" name="especificacion"  value="0"/>
                                 <span class="checkmark"></span>
                             </label>
                             <label class="container">Últimos Productos
-                              <input type="radio" name="especificacion" />
+                              <input type="radio" name="especificacion" value="1"/>
                               <span class="checkmark"></span>
                             </label>
                             <label class="container">Más Vendidos
-                              <input type="radio" name="especificacion" />
+                              <input type="radio" name="especificacion" value="2"/>
                               <span class="checkmark"></span>
                             </label>
                     </div>
