cambios en la pagina de contacto, para que muestre mensaje una vez enviado el comentario del usuario

--- a/html/contacto-agro.html
+++ b/html/contacto-agro.html
@@ -82,6 +82,7 @@
                                 <input type="submit" class="btn boton-contacto" value="ENVIAR" name="enviarContacto"
                                     id="enviarContacto" onclick="return validarContact()" />
                             </div>
+                            <h2 id="mensaje_exito" style="color: green;"></h2>
                         </form>
                     </div>
                 </div>
