--- a/html/subTemplates/header-agro.html
+++ b/html/subTemplates/header-agro.html
@@ -54,7 +54,7 @@
 
     <div class="header">
 
-        <div class="container-fluid">
+        <div class="container-fluid" id="section-menu-logo">
             <div class="row">
                 <div class="col-sm">
                     <nav class="navbar navbar-expand-md navbar-light navmenu">
