--- a/html/subTemplates/menu-search-header-agro.html
+++ b/html/subTemplates/menu-search-header-agro.html
@@ -4,7 +4,7 @@
         font-size: 25px;
     }
 </style>
-<div class="container-fluid">
+<div class="container-fluid" id="section-menu-logo">
     <div class="row">
         <div class="col-xs-12 col-md-10 col-menu">
             <nav class="navbar navbar-expand-md navbar-light">
